--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,14 @@
 body {
     background-image: url("./images/pitch.jpg");
-    margin: 1.7vw;
-    padding: 1.7vw;
+    /* margin: 1.7vw;
+    padding: 1.7vw; */
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
+    background-position: bottom center;
     height: 100vh;
     width: 100vw;
+    overflow: hidden;
+    margin: 0;
 }
 
 #button {
